[gd_scene load_steps=45 format=2]

[ext_resource path="res://Vehicle/RX450h/RX450h.tscn" type="PackedScene" id=1]
[ext_resource path="res://EgoVehicle.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://RoadSurfaceMesh.gd" type="Script" id=4]
[ext_resource path="res://RoadMarkerMesh.gd" type="Script" id=5]
[ext_resource path="res://PointCloudMapMesh.gd" type="Script" id=6]
[ext_resource path="res://ObstacleSegmentationMesh.gd" type="Script" id=7]
[ext_resource path="res://TrajectoryMesh.gd" type="Script" id=8]
[ext_resource path="res://Camera.gd" type="Script" id=9]
[ext_resource path="res://DynamicObjectMesh.gd" type="Script" id=10]
[ext_resource path="res://TrafficLightMesh.gd" type="Script" id=13]
[ext_resource path="res://Vehicle/HeadBeamLight.gd" type="Script" id=14]
[ext_resource path="res://Menu.gd" type="Script" id=17]
[ext_resource path="res://TrafficLightRecognitionMesh.gd" type="Script" id=18]
[ext_resource path="res://Steering.gd" type="Script" id=19]
[ext_resource path="res://steering.png" type="Texture" id=20]
[ext_resource path="res://console_meter.png" type="Texture" id=21]
[ext_resource path="res://SourceCodePro-Light.otf" type="DynamicFontData" id=22]
[ext_resource path="res://console_meter_hand.png" type="Texture" id=23]
[ext_resource path="res://ConsoleMeter.gd" type="Script" id=24]
[ext_resource path="res://VectorMap.gd" type="Script" id=25]
[ext_resource path="res://PathMesh.gd" type="Script" id=26]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.40455, 0.804875, 1.07238 )

[sub_resource type="ProceduralSky" id=28]
resource_name = "sky"
sky_top_color = Color( 1, 1, 1, 1 )
sky_horizon_color = Color( 0, 0.32549, 0.580392, 1 )
sky_curve = 0.245887
ground_bottom_color = Color( 0.145098, 0.145098, 0.145098, 1 )
ground_horizon_color = Color( 0, 0.138012, 0.246094, 1 )
ground_curve = 0.0627669

[sub_resource type="Environment" id=21]
resource_name = "background"
background_mode = 2
background_sky = SubResource( 28 )
fog_color = Color( 0.501961, 0.6, 0.701961, 0.6 )
fog_depth_enabled = false
fog_depth_end = 1609.4

[sub_resource type="SpatialMaterial" id=12]
render_priority = -2
flags_transparent = true
flags_use_point_size = true
params_blend_mode = 1
albedo_color = Color( 0.329412, 0.254902, 0.596078, 1 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 200.0

[sub_resource type="ArrayMesh" id=4]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_unshaded = true
flags_use_point_size = true
params_point_size = 2.0
albedo_color = Color( 0.964706, 1, 0, 0.219608 )

[sub_resource type="ArrayMesh" id=10]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=17]
render_priority = -3
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.607843, 0.607843, 0.607843, 1 )

[sub_resource type="ArrayMesh" id=16]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=19]
render_priority = -2
flags_transparent = true
vertex_color_use_as_albedo = true
distance_fade_mode = 1
distance_fade_min_distance = 200.0
distance_fade_max_distance = 0.0

[sub_resource type="ArrayMesh" id=18]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=30]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=29]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=34]
render_priority = -1
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=35]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=24]
render_priority = -1
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 1, 1, 0.823529 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 60.0

[sub_resource type="ArrayMesh" id=23]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=26]
render_priority = 1
flags_transparent = true
albedo_color = Color( 0, 0.909804, 1, 0.623529 )

[sub_resource type="ArrayMesh" id=27]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=32]
render_priority = 1
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=31]
resource_name = "mesh"

[sub_resource type="DynamicFont" id=33]
size = 80
use_filter = true
font_data = ExtResource( 22 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="EgoVehicle" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="EgoVehicleKinematicBody" type="KinematicBody" parent="EgoVehicle"]

[node name="HeadBeamLight" type="SpotLight" parent="EgoVehicle/EgoVehicleKinematicBody"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.79841, 0.861473, 0 )
light_energy = 2.0
spot_range = 81.425
script = ExtResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="EgoVehicle/EgoVehicleKinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.44026, 0.82268, 0 )
shape = SubResource( 1 )

[node name="VehicleBody" parent="EgoVehicle/EgoVehicleKinematicBody" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.41167, 0, 0 )

[node name="Camera" type="Spatial" parent="EgoVehicle"]
script = ExtResource( 9 )

[node name="Horizon" type="Spatial" parent="EgoVehicle/Camera"]

[node name="Vertical" type="Spatial" parent="EgoVehicle/Camera/Horizon"]

[node name="ViewCamera" type="Camera" parent="EgoVehicle/Camera/Horizon/Vertical"]
transform = Transform( -4.37114e-08, 0.34202, -0.939693, 0, 0.939693, 0.34202, 1, 1.49502e-08, -4.10753e-08, -8, 4, 0 )
environment = SubResource( 21 )
size = 90.53
far = 300.0

[node name="PointCloudMapMesh" type="MeshInstance" parent="."]
material_override = SubResource( 12 )
mesh = SubResource( 4 )
script = ExtResource( 6 )

[node name="ObstacleSegmentationMesh" type="MeshInstance" parent="."]
material_override = SubResource( 13 )
mesh = SubResource( 10 )
skeleton = NodePath("../EgoVehicle")
script = ExtResource( 7 )

[node name="VectorMap" type="Spatial" parent="."]
script = ExtResource( 25 )

[node name="RoadSurfaceMesh" type="MeshInstance" parent="VectorMap"]
material_override = SubResource( 17 )
mesh = SubResource( 16 )
skeleton = NodePath("../..")
script = ExtResource( 4 )

[node name="RoadMarkerMesh" type="MeshInstance" parent="VectorMap"]
material_override = SubResource( 19 )
mesh = SubResource( 18 )
skeleton = NodePath("../RoadSurfaceMesh")
script = ExtResource( 5 )

[node name="TrafficLightMesh" type="MeshInstance" parent="VectorMap"]
material_override = SubResource( 30 )
mesh = SubResource( 29 )
script = ExtResource( 13 )

[node name="PathDrivableAreaMesh" type="MeshInstance" parent="."]
material_override = SubResource( 34 )
mesh = SubResource( 35 )
script = ExtResource( 26 )

[node name="TrajectoryMesh" type="MeshInstance" parent="."]
material_override = SubResource( 24 )
mesh = SubResource( 23 )
script = ExtResource( 8 )

[node name="DynamicObjectMesh" type="MeshInstance" parent="."]
material_override = SubResource( 26 )
mesh = SubResource( 27 )
script = ExtResource( 10 )

[node name="TrafficLightRecognitionMesh" type="MeshInstance" parent="."]
material_override = SubResource( 32 )
mesh = SubResource( 31 )
skeleton = NodePath("../VectorMap")
script = ExtResource( 18 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.866026, 0.5, 0, -0.5, -0.866026, 0, 1.77694, 0 )
visible = false
light_specular = 0.0

[node name="Menu" type="Control" parent="."]
script = ExtResource( 17 )

[node name="PointCloudMapMeshCheckButton" type="CheckButton" parent="Menu"]
margin_right = 76.0
margin_bottom = 40.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "PointCloud Map"

[node name="NightModeCheckButton" type="CheckButton" parent="Menu"]
margin_top = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "Night Mode"

[node name="OnlyKnownObjectCheckButton" type="CheckButton" parent="Menu"]
margin_top = 80.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Only Known Objects"

[node name="RenderingQuality" type="HBoxContainer" parent="Menu"]
margin_left = 6.0
margin_top = 130.0
margin_right = 300.0

[node name="Label" type="Label" parent="Menu/RenderingQuality"]
margin_top = 1.0
margin_right = 185.0
margin_bottom = 15.0
text = "Rendering Quality (Low-High)"

[node name="MSAASlider" type="HSlider" parent="Menu/RenderingQuality"]
margin_left = 189.0
margin_right = 294.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 4.0
tick_count = 5
ticks_on_borders = true

[node name="VehicleStatus" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
alignment = 1

[node name="Steering" type="Sprite" parent="VehicleStatus"]
position = Vector2( -72, -86 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
script = ExtResource( 19 )

[node name="ConsoleMeter" type="Sprite" parent="VehicleStatus"]
position = Vector2( 82, -108 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )
script = ExtResource( 24 )

[node name="VelocityLabel" type="Label" parent="VehicleStatus/ConsoleMeter"]
margin_left = -210.0
margin_top = 58.0
margin_right = 216.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0.321569, 0.321569, 0.321569, 1 )
custom_fonts/font = SubResource( 33 )
text = "0Km"
align = 1
valign = 1

[node name="Hand" type="Sprite" parent="VehicleStatus/ConsoleMeter"]
position = Vector2( 0, 50 )
texture = ExtResource( 23 )

[connection signal="toggled" from="Menu/PointCloudMapMeshCheckButton" to="PointCloudMapMesh" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Menu/NightModeCheckButton" to="EgoVehicle" method="_on_NightModeCheckButton_toggled"]
[connection signal="toggled" from="Menu/NightModeCheckButton" to="EgoVehicle/Camera" method="_on_NightModeCheckButton_toggled"]
[connection signal="toggled" from="Menu/OnlyKnownObjectCheckButton" to="DynamicObjectMesh" method="_on_OnlyKnownObjectCheckButton_toggled"]
[connection signal="value_changed" from="Menu/RenderingQuality/MSAASlider" to="." method="_on_MSAASlider_value_changed"]
